--- a/app/src/main/res/layout/activity_new_invoice.xml
+++ b/app/src/main/res/layout/activity_new_invoice.xml
@@ -4,149 +4,145 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewInvoiceActivity"
-    android:background="@drawable/loginbackground"
-    >
+    android:background="@drawable/mainfragmentbackground"
+    tools:context=".NewInvoiceActivity">
 
-    <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+
         <LinearLayout
 
             android:layout_width="match_parent"
 
             android:layout_height="match_parent"
 
-            android:orientation="vertical" >
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="100dp"
-            >
+            android:orientation="vertical">
 
-            <TextView
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="692dp"
+                android:layout_marginTop="60dp">
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvInvTitle"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="80dp"
-                android:text="Faktura"
-                android:textColor="@color/colorDarkGray"
-                android:textSize="30sp"
-                app:fontFamily="@font/ubuntu_medium"
-                />
+                <EditText
+                    android:id="@+id/txtInvTitle"
+                    android:layout_width="310dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@id/tvInvTitle"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/input_field"
+                    android:ems="10"
+                    android:hint="Titulli"
+                    android:textColor="@color/colorDarkGray"
+                    android:textColorHighlight="@color/colorPrimary"
+                    android:textColorHint="@color/colorgray"
+                    android:textColorLink="@color/colorPrimary" />
 
-            <EditText
-                android:layout_width="310dp"
-                android:layout_height="50dp"
-                android:id="@+id/txtInvTitle"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@id/tvInvTitle"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/input_field"
-                android:ems="10"
-                android:hint="Titulli"
-                android:textColor="@color/colorDarkGray"
-                android:textColorHighlight="@color/colorPrimary"
-                android:textColorHint="@color/colorgray"
-                android:textColorLink="@color/colorPrimary"
-                />
-            <Spinner
-                android:layout_width="310dp"
-                android:layout_height="50dp"
-                android:id="@+id/spInvReason"
-                android:layout_below="@id/txtInvTitle"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/input_field"
-                android:spinnerMode="dialog"
-                android:entries="@array/spReason_items"
-                android:textColor="@color/colorDarkGray"
-                android:textColorHighlight="@color/colorPrimary"
-                android:textColorHint="@color/colorgray"
-                android:textColorLink="@color/colorPrimary"/>
+                <Spinner
+                    android:id="@+id/spInvReason"
+                    android:layout_width="310dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@id/txtInvTitle"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/input_field"
+                    android:entries="@array/spReason_items"
+                    android:spinnerMode="dialog"
+                    android:textColor="@color/colorDarkGray"
+                    android:textColorHighlight="@color/colorPrimary"
+                    android:textColorHint="@color/colorgray"
+                    android:textColorLink="@color/colorPrimary" />
 
-            <EditText
-                android:layout_width="310dp"
-                android:layout_height="50dp"
-                android:id="@+id/txtInvSum"
-                android:layout_below="@id/spInvReason"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/input_field"
-                android:ems="10"
-                android:hint="Shuma"
-                android:textColor="@color/colorDarkGray"
-                android:textColorHighlight="@color/colorPrimary"
-                android:textColorHint="@color/colorgray"
-                android:textColorLink="@color/colorPrimary"
-                />
-            <EditText
-                android:layout_width="310dp"
-                android:layout_height="50dp"
-                android:id="@+id/txtInvComment"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/txtInvSum"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/input_field"
-                android:ems="10"
-                android:hint="Komenti"
-                android:textColor="@color/colorDarkGray"
-                android:textColorHighlight="@color/colorPrimary"
-                android:textColorHint="@color/colorgray"
-                android:textColorLink="@color/colorPrimary"
-                />
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginBottom="20dp"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/ic_fakturat"
-                android:id="@+id/invimgview"
-                android:layout_below="@id/txtInvComment"/>
-            <Button
-            android:id="@+id/btnInvTakePic"
-            android:layout_width="179dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/buttonwhite"
-            android:text="Ngarko Faturen"
-            android:textAllCaps="false"
-            android:textColor="@color/colorPrimaryLight"
-            android:textColorHighlight="@color/colorPrimaryDarker"
-            android:textColorHint="@color/colorPrimaryDarker"
-            android:textColorLink="@color/colorPrimaryDarker"
-            android:textCursorDrawable="@color/colorPrimary"
-            android:textSize="17sp"
-            android:layout_below="@id/invimgview"
-            android:layout_centerHorizontal="true"
-            />
-            <Button
-                android:id="@+id/btnInvSend"
-                android:layout_width="179dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/button"
-                android:text="Dergo"
-                android:textAllCaps="false"
-                android:textColor="@color/colorwhite"
-                android:textColorHighlight="@color/colorPrimaryDarker"
-                android:textColorHint="@color/colorPrimaryDarker"
-                android:textColorLink="@color/colorPrimaryDarker"
-                android:textCursorDrawable="@color/colorPrimary"
-                android:textSize="17sp"
-                android:layout_below="@id/btnInvTakePic"
-                android:layout_centerHorizontal="true"
-                />
+                <EditText
+                    android:id="@+id/txtInvSum"
+                    android:layout_width="310dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@id/spInvReason"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/input_field"
+                    android:ems="10"
+                    android:hint="Shuma"
+                    android:textColor="@color/colorDarkGray"
+                    android:textColorHighlight="@color/colorPrimary"
+                    android:textColorHint="@color/colorgray"
+                    android:textColorLink="@color/colorPrimary" />
 
-        </RelativeLayout>
+                <EditText
+                    android:id="@+id/txtInvComment"
+                    android:layout_width="310dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@+id/txtInvSum"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/input_field"
+                    android:ems="10"
+                    android:hint="Komenti"
+                    android:textColor="@color/colorDarkGray"
+                    android:textColorHighlight="@color/colorPrimary"
+                    android:textColorHint="@color/colorgray"
+                    android:textColorLink="@color/colorPrimary" />
+
+                <ImageView
+                    android:id="@+id/invimgview"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_below="@id/txtInvComment"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="20dp"
+                    android:src="@drawable/ic_fakturat" />
+
+                <Button
+                    android:id="@+id/btnInvTakePic"
+                    android:layout_width="179dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@id/invimgview"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/buttonwhite"
+                    android:text="Ngarko Faturen"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorPrimaryLight"
+                    android:textColorHighlight="@color/colorPrimaryDarker"
+                    android:textColorHint="@color/colorPrimaryDarker"
+                    android:textColorLink="@color/colorPrimaryDarker"
+                    android:textCursorDrawable="@color/colorPrimary"
+                    android:textSize="17sp" />
+
+                <Button
+                    android:id="@+id/btnInvSend"
+                    android:layout_width="179dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@id/btnInvTakePic"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/button"
+                    android:text="Dergo"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorwhite"
+                    android:textColorHighlight="@color/colorPrimaryDarker"
+                    android:textColorHint="@color/colorPrimaryDarker"
+                    android:textColorLink="@color/colorPrimaryDarker"
+                    android:textCursorDrawable="@color/colorPrimary"
+                    android:textSize="17sp" />
+
+                <TextView
+
+                    android:id="@+id/tvInvTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="155dp"
+                    android:layout_marginEnd="150dp"
+                    android:layout_marginBottom="80dp"
+                    android:text="Faktura"
+                    android:textColor="@color/colorDarkGray"
+                    android:textSize="30sp"
+                    app:fontFamily="@font/ubuntu_medium" />
+
+            </RelativeLayout>
+
         </LinearLayout>
 
-    </ScrollView>
 
 
 </RelativeLayout>
