--- a/app/src/main/res/layout/activity_new_order.xml
+++ b/app/src/main/res/layout/activity_new_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mainfragmentbackground"
+    android:background="@drawable/cardbackground"
     tools:context=".NewInvoiceActivity">
 
 
@@ -181,12 +181,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="83dp"
-        android:layout_marginEnd="91dp"
-        android:layout_marginBottom="30dp"
-        android:text="Bej Porosi te re"
+        android:layout_marginStart="85dp"
         android:layout_marginTop="30dp"
-        android:textColor="@color/colorDarkGray"
+        android:layout_marginEnd="89dp"
+        android:layout_marginBottom="30dp"
+        android:text="Porosi e re"
+        android:textAlignment="center"
+        android:textColor="@color/colorwhite"
         android:textSize="30sp"
         app:fontFamily="@font/ubuntu_medium" />
 
