--- a/app/src/main/res/layout/myinvoices_item.xml
+++ b/app/src/main/res/layout/myinvoices_item.xml
@@ -8,10 +8,14 @@
 
     <TextView
         android:id="@+id/inv_item_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="161dp"
+        android:layout_height="21dp"
         android:layout_marginStart="4dp"
         android:text="TextView"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/colorDarkGray"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,10 +23,14 @@
 
     <TextView
         android:id="@+id/inv_item_sum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="161dp"
+        android:layout_height="21dp"
         android:layout_marginStart="24dp"
         android:text="TextView"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/colorDarkGray"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.868"
