--- a/app/src/main/res/layout/activity_new_order.xml
+++ b/app/src/main/res/layout/activity_new_order.xml
@@ -4,87 +4,86 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cardbackground"
+    android:background="@drawable/porosiabackground"
     tools:context=".NewInvoiceActivity">
 
 
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/txtInvSum"
-            android:layout_marginTop="135dp"
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtInvSum"
+        android:layout_marginLeft="270dp"
+        android:layout_marginTop="135dp"
+        android:layout_marginBottom="20dp">
+
+        <RadioButton
+            android:id="@+id/radio3"
+            android:layout_width="130dp"
+            android:layout_height="30dp"
+            android:layout_above="@id/radio2"
+            android:layout_marginLeft="30dp"
+            android:checked="true"
+            android:text="Paguar" />
+
+        <RadioButton
+            android:id="@+id/radio2"
+            android:layout_width="130dp"
+            android:layout_height="30dp"
+            android:layout_above="@id/radio1"
+            android:layout_marginLeft="30dp"
+            android:text="Ne Proces" />
+
+        <RadioButton
+            android:id="@+id/radio1"
+            android:layout_width="130dp"
+            android:layout_height="30dp"
+            android:layout_above="@id/btnInvTakePic"
+            android:layout_marginLeft="30dp"
             android:layout_marginBottom="20dp"
-            android:layout_marginLeft="270dp">
+            android:text="Pa Paguar" />
+    </RadioGroup>
 
-            <RadioButton
-                android:id="@+id/radio3"
-                android:layout_width="130dp"
-                android:layout_height="30dp"
-                android:layout_above="@id/radio2"
-                android:layout_marginLeft="30dp"
-                android:checked="true"
-                android:text="Paguar" />
+    <TextView
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/txtInvSum"
+        android:layout_marginLeft="220dp"
+        android:layout_marginTop="163dp"
+        android:text="Statusi:"
+        android:textColor="@color/colorDarkGray"
+        android:textSize="20sp" />
 
-            <RadioButton
-                android:id="@+id/radio2"
-                android:layout_width="130dp"
-                android:layout_height="30dp"
-                android:layout_above="@id/radio1"
-                android:layout_marginLeft="30dp"
-                android:text="Ne Proces" />
-
-            <RadioButton
-                android:id="@+id/radio1"
-                android:layout_width="130dp"
-                android:layout_height="30dp"
-                android:layout_above="@id/btnInvTakePic"
-                android:layout_marginLeft="30dp"
-                android:layout_marginBottom="20dp"
-                android:text="Pa Paguar" />
-        </RadioGroup>
-
-        <TextView
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:text="Statusi:"
-            android:textSize="20sp"
-            android:textColor="@color/colorDarkGray"
-            android:layout_below="@id/txtInvSum"
-            android:layout_marginTop="163dp"
-            android:layout_marginLeft="220dp"
-            />
-
-            <EditText
-                android:id="@+id/porosiaID"
-                android:layout_width="310dp"
-                android:layout_height="50dp"
-                android:layout_below="@id/tvInvTitle"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/input_field"
-                android:ems="10"
-                android:hint="Porosia"
-                android:textColor="@color/colorDarkGray"
-                android:textColorHighlight="@color/colorPrimary"
-                android:textColorHint="@color/colorgray"
-                android:textColorLink="@color/colorPrimary" />
+    <EditText
+        android:id="@+id/porosiaID"
+        android:layout_width="310dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/tvInvTitle"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/input_field"
+        android:ems="10"
+        android:hint="Porosia"
+        android:textColor="@color/colorDarkGray"
+        android:textColorHighlight="@color/colorPrimary"
+        android:textColorHint="@color/colorgray"
+        android:textColorLink="@color/colorPrimary" />
 
 
-            <EditText
-                android:id="@+id/lokacioni"
-                android:layout_width="310dp"
-                android:layout_height="50dp"
-                android:layout_below="@id/porosiaID"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/input_field"
-                android:ems="10"
-                android:hint="Lokacioni"
-                android:textColor="@color/colorDarkGray"
-                android:textColorHighlight="@color/colorPrimary"
-                android:textColorHint="@color/colorgray"
-                android:textColorLink="@color/colorPrimary" />
+    <EditText
+        android:id="@+id/lokacioni"
+        android:layout_width="310dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/porosiaID"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/input_field"
+        android:ems="10"
+        android:hint="Lokacioni"
+        android:textColor="@color/colorDarkGray"
+        android:textColorHighlight="@color/colorPrimary"
+        android:textColorHint="@color/colorgray"
+        android:textColorLink="@color/colorPrimary" />
 
     <EditText
         android:id="@+id/txtInvSum"
@@ -92,38 +91,40 @@
         android:layout_height="50dp"
         android:layout_below="@id/lokacioni"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/input_field"
         android:ems="10"
         android:hint="Data e leshimit"
-        android:layout_marginBottom="20dp"
         android:textColor="@color/colorDarkGray"
         android:textColorHighlight="@color/colorPrimary"
         android:textColorHint="@color/colorgray"
         android:textColorLink="@color/colorPrimary" />
+
     <EditText
         android:id="@+id/derguesi"
         android:layout_width="310dp"
         android:layout_height="50dp"
         android:layout_below="@id/txtInvSum"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/input_field"
         android:ems="10"
         android:hint="Derguesi"
-        android:layout_marginBottom="20dp"
         android:textColor="@color/colorDarkGray"
         android:textColorHighlight="@color/colorPrimary"
         android:textColorHint="@color/colorgray"
         android:textColorLink="@color/colorPrimary" />
+
     <EditText
         android:id="@+id/marresi"
         android:layout_width="310dp"
         android:layout_height="50dp"
         android:layout_below="@id/derguesi"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/input_field"
         android:ems="10"
         android:hint="Marresi"
-        android:layout_marginBottom="20dp"
         android:textColor="@color/colorDarkGray"
         android:textColorHighlight="@color/colorPrimary"
         android:textColorHint="@color/colorgray"
@@ -133,46 +134,52 @@
         android:id="@+id/caktoSasineSpinner"
         android:layout_width="60dp"
         android:layout_height="50dp"
+        android:layout_below="@+id/marresi"
         android:layout_alignLeft="@+id/txtInvSum"
         android:layout_marginLeft="90dp"
         android:layout_marginTop="0dp"
-        android:layout_below="@+id/marresi"
         android:layout_marginBottom="150dp"
         android:entries="@array/spinnerSasia"
+        android:paddingRight="30dp"
         android:spinnerMode="dialog"
         android:textAlignment="textEnd"
-        android:paddingRight="30dp"
         android:textColor="@color/colorDarkGray"
         android:textColorHint="@color/colorgray"
         android:textColorLink="@color/colorPrimary" />
+
     <TextView
         android:layout_width="120dp"
         android:layout_height="20dp"
+        android:layout_below="@id/marresi"
         android:layout_alignRight="@id/caktoSasineSpinner"
         android:layout_marginTop="13dp"
         android:layout_marginRight="55dp"
-        android:layout_below="@id/marresi"
         android:text="Cakto Sasine:"
         android:textColor="@color/colorDarkGray"
         android:textSize="18sp" />
 
 
-            <Button
-                android:id="@+id/btnInvSend"
-                android:layout_width="179dp"
-                android:layout_height="50dp"
-                android:layout_below="@id/radioGroup"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/button"
-                android:text="Regjistro"
-                android:textAllCaps="false"
-                android:textColor="@color/colorwhite"
-                android:textColorHighlight="@color/colorPrimaryDarker"
-                android:textColorHint="@color/colorPrimaryDarker"
-                android:textColorLink="@color/colorPrimaryDarker"
-                android:textCursorDrawable="@color/colorPrimary"
-                android:textSize="17sp" />
+    <Button
+        android:id="@+id/btnInvSend"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_below="@id/radioGroup"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="116dp"
+        android:layout_marginBottom="44dp"
+        android:background="@drawable/button"
+        android:text="Regjistro"
+        android:textAllCaps="false"
+        android:textColor="@color/colorwhite"
+        android:textColorHighlight="@color/colorPrimaryDarker"
+        android:textColorHint="@color/colorPrimaryDarker"
+        android:textColorLink="@color/colorPrimaryDarker"
+        android:textCursorDrawable="@color/colorPrimary"
+        android:textSize="17sp" />
 
     <TextView
 
@@ -181,12 +188,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="85dp"
+        android:layout_marginStart="87dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="89dp"
+        android:layout_marginEnd="87dp"
         android:layout_marginBottom="30dp"
         android:text="Porosi e re"
         android:textAlignment="center"
+        android:textAllCaps="true"
         android:textColor="@color/colorwhite"
         android:textSize="30sp"
         app:fontFamily="@font/ubuntu_medium" />
